<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loginLLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/loginLLyt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="2.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginText"
                    android:layout_marginTop="20dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orderLoginText"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:lineSpacingExtra="2dp"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:layout_height="match_parent"
                android:src="@drawable/ic_sign_in"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/loginLLyt2"
            android:background="@color/colorPrimaryText"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/supportLLyt"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/supportText"
            android:textSize="16sp"
            android:textStyle="normal"
            android:gravity="center_vertical|top"
            android:textColor="@color/colorPrimaryText"/>

        <ImageView
            android:id="@+id/imgSupport"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_customer_service"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/faqsLLyt"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/faqText"
            android:textSize="16sp"
            android:textStyle="normal"
            android:gravity="center_vertical|top"
            android:textColor="@color/colorPrimaryText"/>

        <ImageView
            android:id="@+id/ImgFaqs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_faqs"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/termsLLyt"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/termsConditionText"
            android:textSize="16sp"
            android:textStyle="normal"
            android:gravity="center_vertical|top"
            android:textColor="@color/colorPrimaryText"/>

        <ImageView
            android:id="@+id/truiton_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_terms_condition"/>

    </LinearLayout>
</LinearLayout>