<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="50dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/apptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/apptitle"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/search_your_recipes"
                    android:textColor="@color/colorPrimaryLight"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_search_primary_light"
                    android:drawableStart="@drawable/ic_search_primary_light"
                    android:drawablePadding="10dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:overScrollMode="never"
                android:foregroundGravity="center"
                android:clipToPadding="false"
                android:layout_marginTop="10dp"
                android:layout_below="@id/cardSearchView"/>

            <include android:id="@+id/shimmerMeal"
                layout="@layout/item_view_pager_header_shimmer" />

            <!--<android.support.design.widget.TabLayout
                android:id="@+id/indicatorTabLt"
                android:layout_below="@+id/viewPagerHeader"
                app:tabBackground="@drawable/indicator_selector"
                app:tabGravity="center"
                android:padding="3dp"
                android:layout_centerHorizontal="true"
                app:tabIndicatorHeight="0dp"
                android:layout_width="230dp"
                android:layout_height="30dp"/>-->

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/indicatorTabLt"
                android:layout_below="@+id/viewPagerHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:dotsColor="@color/colorPrimary"
                app:dotsStrokeColor="@color/colorPrimaryLight"
                app:dotsCornerRadius="6dp"
                app:dotsSize="12dp"
                app:dotsSpacing="3dp"
                app:dotsStrokeWidth="2dp" />

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/meal_categories"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:layout_below="@id/indicatorTabLt"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoryItemRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:clipToPadding="false"
                android:layout_below="@id/titleCategory"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"/>

            <include android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />

            <!--<TextView
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:background="@color/colorPrimaryLight"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>-->

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>